--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@ h6,
 p {
   margin: 0;
 }
-a {text-decoration: none;}
+a {
+  text-decoration: none;
+}
 ul {
   list-style-type: none;
   padding: 0;
@@ -121,15 +123,19 @@ address {
   width: 100%;
 }
 .main-page {
-  padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/people-office-1.jpg);
   background-color: #2e2f42;
+  padding: 188px 0;
   text-align: center;
 }
+
 .title-text {
-  
   margin: 0 auto;
   max-width: 496px;
-  background-color: #2e2f42;
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   font-size: 56px;
@@ -182,6 +188,16 @@ address {
   white-space: nowrap;
   border: 0;
 }
+.icons-features {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background: #f4f4fd;
+}
 .features-list-item {
   width: calc((100% - 72px) / 4);
 }
@@ -203,6 +219,27 @@ address {
 }
 .position {
   text-align: center;
+  padding-bottom: 8px;
+}
+
+.workers-links {
+  display: flex;
+  gap: 24px;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+}
+.workers-links .link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+.workers-links .icon-soc {
+  fill: #4d5ae5;
 }
 .work-gallery {
   width: calc((100% - 72px) / 4);
@@ -243,7 +280,6 @@ address {
   margin-bottom: 72px;
 }
 .prod {
- 
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
@@ -269,7 +305,6 @@ address {
 }
 .team {
   background-color: #f4f4fd;
-
   color: #f4f4fd;
 }
 
@@ -289,12 +324,10 @@ address {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  
   width: 264px;
 }
 .footer {
   padding: 100px 0;
- 
 }
 #footer {
   background-color: #2e2f42;
