--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@ section {
 
 .header-page {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
 }
 .header-container {
   display: flex;
@@ -93,20 +96,30 @@ address {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link:hover {
+.link.current {
+  position: relative;
+}
+.link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
+
+.link:hover,
+.link:focus,
+.contact:focus,
+.contact:hover,
+.link.current {
   color: #404bbf;
 }
 
-.link:focus {
-  color: #404bbf;
-}
-.contact:focus {
-  color: #404bbf;
-}
-.contact:hover {
-  color: #404bbf;
-}
 .contact {
   display: block;
   padding: 24px 0;
@@ -118,6 +131,7 @@ address {
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero {
   width: 100%;
@@ -127,7 +141,7 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/people-office-1.jpg);
+    url(../images/people-office-1.jpg);
   background-color: #2e2f42;
   padding: 188px 0;
   text-align: center;
@@ -174,6 +188,7 @@ address {
 .features-descr {
   text-align: left;
   margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 .visually-hidden {
@@ -229,7 +244,7 @@ address {
   justify-content: center;
   align-items: center;
 }
-.workers-links .link {
+.workers-links .social-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -238,6 +253,7 @@ address {
   background-color: #4d5ae5;
   border-radius: 50%;
 }
+
 .workers-links .icon-soc {
   fill: #4d5ae5;
 }
@@ -283,6 +299,31 @@ address {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+.box {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  background: #4d5ae5;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: left;
+  padding: 40px 32px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-100%);
+  transition: transform 500ms ease-in-out;
+}
+.box:hover .overlay {
+  transform: translatey(0);
 }
 .img-prod {
   width: calc((100% - 48px) / 3);
@@ -356,4 +397,35 @@ address {
 }
 .foot {
   justify-content: flex-start;
+}
+.foot-items {
+  display: flex;
+  gap: 120px;
+}
+
+.text-sm {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  width: 208px;
+  padding-bottom: 16px;
+}
+.sm-links .footer-icon-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+.sm-links {
+  display: flex;
+  gap: 16px;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
 }
