--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,10 @@ address {
   width: 100%;
 }
 .main-page {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 1440px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -183,12 +187,12 @@ address {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   text-align: center;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .features-descr {
   text-align: left;
   margin-bottom: 8px;
-  margin-top: 8px;
 }
 
 .visually-hidden {
@@ -204,6 +208,7 @@ address {
   border: 0;
 }
 .icons-features {
+  margin-bottom: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -252,6 +257,11 @@ address {
   height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: #404bbf;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link,
