--- a/css/styles.css
+++ b/css/styles.css
@@ -334,10 +334,15 @@ address {
   transition: transform 500ms ease-in-out;
 }
 .box:hover .overlay {
-  transform: translatey(0);
+  transform: translateY(0);
 }
 .img-prod {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: calc((100% - 48px) / 3);
+}
+.img-prod:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .prod-list {
   display: flex;
@@ -407,11 +412,12 @@ address {
   text-decoration: none;
 }
 .foot {
+  margin-right: 120px;
   justify-content: flex-start;
 }
 .foot-items {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
 }
 
 .text-sm {
@@ -422,7 +428,7 @@ address {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   width: 208px;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 .sm-links .footer-icon-link {
   display: flex;
@@ -439,4 +445,11 @@ address {
   flex-shrink: 0;
   justify-content: center;
   align-items: center;
+}
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: #31d0aa;
+}
+.icon-soc {
+  fill: #f4f4fd;
 }
