--- a/css/styles.css
+++ b/css/styles.css
@@ -315,8 +315,8 @@ address {
   position: relative;
   overflow: hidden;
 }
-.overlay {
-  background: #4d5ae5;
+.hidden-p {
+  background-color: #4d5ae5;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -327,13 +327,13 @@ address {
   color: #f4f4fd;
   position: absolute;
   top: 0;
-  left: 0;
+
   width: 100%;
   height: 100%;
-  transform: translateY(-100%);
-  transition: transform 500ms ease-in-out;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.box:hover .overlay {
+.box:hover .hidden-p {
   transform: translateY(0);
 }
 .img-prod {
@@ -422,11 +422,11 @@ address {
 
 .text-sm {
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
+  color: #ffffff;
   width: 208px;
   margin-bottom: 16px;
 }
@@ -449,6 +449,9 @@ address {
 .footer-icon-link:hover,
 .footer-icon-link:focus {
   background-color: #31d0aa;
+}
+.footer-icon-link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-soc {
   fill: #f4f4fd;
