--- a/css/styles.css
+++ b/css/styles.css
@@ -327,13 +327,12 @@ address {
   color: #f4f4fd;
   position: absolute;
   top: 0;
-
   width: 100%;
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.box:hover .hidden-p {
+.img-prod:hover .hidden-p {
   transform: translateY(0);
 }
 .img-prod {
